tests/reject/bad_assign.ul
void main() {
     int x;
     float y;

     x = y;
}